# tet-rs

./: .gitattributes  Cargo.toml  README.md  index.html
pkg/: package.json  tet_rs.d.ts  tet_rs.js  tet_rs_bg.js  tet_rs_bg.wasm  tet_rs_bg.wasm.d.ts
src/: lib.rs  main.rs  shader.wgsl  tetris.rs  utils.rs
src/tetris/: base.rs  colours.rs  drawable.rs  game_area.wgsl  game_state.rs  mod.rs  scene.rs  vertex.rs
src/tetrs/: base.rs  colours.rs  drawable.rs  game_state.rs  mod.rs  scene.rs  tetris.wgsl  tetris_new.wgsl  tetromino.rs  text.rs  vertex.rs  writer.rs
