[package]
name = "tet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.68"
bytemuck = {version = "1.13.0", features = ["derive"]}
glyph_brush = "0.7.5"
log = "0.4.17"
pollster = "0.2.5"
simple_logger = "4.0.0"
wgpu = "0.14.2"
wgpu_text = "0.6.5"
winit = "0.27.5"
