[package]
name = "tet-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tutorial2-surface"
path = "src/main.rs"

[dependencies.getrandom]
features = ["js"]

[dependencies]
anyhow = "1.0.68"
bytemuck = {version = "1.13.0", features = ["derive"]}
glyph_brush = "0.7.5"
instant = {version = "0.1.12", features = [ "stdweb" ]}
log = "0.4.17"
random-number = "0.1.8"
wgpu = {version = "0.14.2", features = ["webgl"]}
wgpu_text = "0.6.5"
winit = "0.28.1"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = {version = "0.3.61", features = [
  "Document",
  "Window",
  "Element",
]}
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"